# fastapi-aiogram-template

./: .env.docker  .pre-commit-config.yaml  Dockerfile  Dockerfile.dev  Makefile  README.md  docker-compose.yml  pyproject.toml  railway.toml  setup.cfg
.github/workflows/: linter-check.yml  tests-coverage.yml
backend/: __init__.py  app.py  settings.py
backend/services/telegram/botfather/: bot.py  handlers.py  routing.py
src/: __init__.py  app.py  settings.py
src/services/telegram/botfather/: bot.py  handlers.py  routing.py
