[tool.poetry]
name = "FastAPI template"
version = "0.1.1"
description = ""
authors = ["Ilia Kaziamov <kaziamov@outlook.com>"]
readme = "README.md"
packages = [{include = "backend"}]

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
fastapi = "^0.115.6"
aiogram = "^3.16.0"
hexfrost-toolbox = "^0.1.2"
aiohttp = "^3.11.11"
python-dotenv = "^1.0.1"
uvicorn = "^0.34.0"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
