[tool.pdm.build]
includes = [
    "backend",
]
[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[project]
authors = [
    {name = "Ilia Kaziamov", email = "kaziamov@outlook.com"},
]
requires-python = "<4.0,>=3.12"
dependencies = [
    "fastapi<1.0.0,>=0.115.6",
    "aiogram<4.0.0,>=3.16.0",
    "hexfrost-toolbox<1.0.0,>=0.1.2",
    "aiohttp<4.0.0,>=3.11.11",
    "python-dotenv<2.0.0,>=1.0.1",
    "uvicorn<1.0.0,>=0.34.0",
]
name = "FastAPI-template"
version = "0.1.1"
description = ""
readme = "README.md"

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "pre-commit>=4.1.0",
    "anyio[trio]>=3.7.1",
    "pytest-asyncio>=0.25.3",
    "flake8>=7.2.0",
]
